[package]
name = "apery"
version = "2.1.0"
authors = ["HiraokaTakuya <hiraoka64@gmail.com>"]
edition = "2021"
rust-version = "1.75.0"

[dependencies]
anyhow = "1.0.86"
arrayvec = "0.7.4"
custom_derive = "0.1.7"
derive_more = "0.99.18"
enum_derive = "0.1.7"
num = "0.4.3"
once_cell = "1.19.0"
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
static_assertions = "1.1.0"
thiserror = "1.0.61"
tsumeshogi-solver = { tag = "0.5.2", git = "https://github.com/sugyan/tsumeshogi-solver.git" }

[profile.release]
lto = true

[features]
default = ["kppt"]
kppt = []
material = []
